tests/out/error/index/range.in.bt
arr := [1, 2, 3]
_ = arr[1..2]

s := "hello"
_ = s[1..2]

mymap := map{
	"a": 1
}
_ = mymap[1..2]
